# nlxml

./: .gitignore  CMakeLists.txt  LICENSE.md  NLXMLBindings.i  README.md  nlxml.cpp  nlxml.h  tinyxml2.cpp
src/: CMakeLists.txt  nlxml.cpp  nlxml.h  tinyxml2.h
utils/: CMakeLists.txt  nlxml_diadem_missed.cpp  nlxml_inspector.cpp  nlxml_simplifier.cpp  nlxml_to_swc.cpp  nlxml_transformer.cpp  swc_to_nlxml.cpp
